--- a/src/app/courses/input/input.component.html
+++ b/src/app/courses/input/input.component.html
@@ -1,1 +1,4 @@
-<p>input works!</p>
+<div class="inputBlock">
+    <input type="text" [(ngModel)]="text" (input)="onInputChange()" placeholder="Text to search">
+    <button (click)="onButtonClick()">Submit</button>
+</div>
