--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="container">
-    <app-logo></app-logo>
-    <div class="login"></div>
-    <button class="loginButton">Login</button>
+    <div class="headerContainer">
+        <app-logo></app-logo>
+        <div class="headerRightBlock">
+            <div class="headerLogin">User Login</div>
+            <button class="headerLoginButton">Login</button>
+        </div>
+    </div>
 </div>
-
