--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,4 +1,12 @@
 <div class="container">
+    <div class="coursesContainer">
+        <p class="coursesName">Courses</p>
+    </div>
+</div>
+<div class="coursesInnerContainer">
     <app-input></app-input>
+    <div class="coursesButtonContainer">
+        <button class="createNewCourseButton">+ Add course</button>
+    </div>
     <app-courses-list></app-courses-list>
 </div>
