--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -6,7 +6,7 @@
 <div class="coursesInnerContainer">
     <app-input></app-input>
     <div class="coursesButtonContainer">
-        <button class="createNewCourseButton">+ Add course</button>
+        <app-button label="+ Add course"></app-button>
     </div>
     <app-courses-list></app-courses-list>
 </div>
