--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -1,8 +1,9 @@
 <ul class="coursesList">
     <li *ngFor="let item of courses; trackBy: trackByFn">
-        <app-course-item [id]="item.Id" [title]="item.Title" [description]="item.Description" [duration]="item.Duration"
-            [creationDate]="item.CreationDate" (deletedItemId)="onDeleteCourse($event)">
+        <app-course-item [id]="item.id" [title]="item.title" [description]="item.description" [duration]="item.duration"
+            [creationDate]="item.creationDate" (deletedItemId)="onDeleteCourse($event)">
         </app-course-item>
     </li>
-    <button class="coursesLoadMore" (click)="onClickLoadMore()">LOAD MORE</button>
+    <!-- <button class="coursesLoadMore" (click)="onClickLoadMore()">Load more</button> -->
+    <app-button label="Load more" (clicked)="onClickLoadMore()" [buttonClass]="'loadMoreButton'"></app-button>
 </ul>
