--- a/src/app/courses/courses-list/course-item/course-item.component.css
+++ b/src/app/courses/courses-list/course-item/course-item.component.css
@@ -6,6 +6,7 @@
     margin-bottom: 20px;
     border-radius: 5px;
     min-height: 100px;
+    border: 2px solid grey;
 }
 
 .courseItemUpperBlock {
