--- a/src/app/courses/courses-list/course-item/course-item.component.html
+++ b/src/app/courses/courses-list/course-item/course-item.component.html
@@ -1,4 +1,4 @@
-<div class="courseItemContainer">
+<div [appHighlightCreationDate]="creationDate" class="courseItemContainer">
     <div class="courseItemUpperBlock">
         <p class="courseItemTitle">{{title}}</p>
         <p class="courseItemDuration">{{duration}}</p>
