--- a/src/app/courses/courses-list/courses-list.component.css
+++ b/src/app/courses/courses-list/courses-list.component.css
@@ -2,3 +2,12 @@ ul {
     list-style-type: none;
     padding: 0;
 }
+
+.noCourses {
+    text-align: center;
+    height: 20px;
+    width: 100%;
+    background-color: #FFF;
+    border: 1px solid gray;
+    margin-bottom: 20px;
+}
