--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -1,4 +1,5 @@
 <ul class="coursesList">
+    <div class="noCourses" *ngIf="courses.length === 0">No data feel free to enter new course</div>
     <li *ngFor="let item of courses; trackBy: trackByFn">
         <app-course-item [id]="item.id" [title]="item.title" [description]="item.description" [duration]="item.duration"
             [creationDate]="item.creationDate" (deletedItemId)="onDeleteCourse($event)">
