hw 4 is done without tests

--- a/src/app/courses/courses-list/course-item/course-item.component.css
+++ b/src/app/courses/courses-list/course-item/course-item.component.css
@@ -9,15 +9,30 @@
     border: 2px solid grey;
 }
 
+.courseItemContainerFavoriteBackground {
+    background-color: rgb(207, 232, 240);
+}
+
 .courseItemUpperBlock {
     display: flex;
     align-items: center;
 }
 
+.courseItemTitleBlock {
+    display: flex;
+    justify-content: left;
+    width: 700px;
+    /* margin-right: 500px; */
+}
+
 .courseItemTitle {
-    margin-right: 500px;
+    margin-right: 10px;
     font-size: 1.5rem;
     font-weight: 700;
+}
+
+.courseItemStar {
+    color: orange;
 }
 
 .courseItemDuration {
