--- a/src/app/courses/input/input.component.html
+++ b/src/app/courses/input/input.component.html
@@ -1,4 +1,4 @@
 <div class="inputBlock">
-    <input type="text" [(ngModel)]="text" (input)="onInputChange()" placeholder="Text to search">
+    <input type="text" [(ngModel)]="text" placeholder="Text to search">
     <button (click)="onButtonClick()">Submit</button>
 </div>
