working with auth service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header>
 </app-header>
+<!-- <app-modal-login></app-modal-login> -->
 <app-courses>
   <app-input></app-input>
   <app-courses-list></app-courses-list>
