--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="headerContainer">
         <app-logo></app-logo>
-        <div class="headerRightBlock">
-            <div class="headerLogin">User Login</div>
-            <button class="headerLoginButton">Login</button>
+        <div *appHideIfNotAuthenticated class="headerRightBlock">
+            <div class="headerLogin">{{userName}}</div>
+            <button class="headerLoginButton" (click)="onLogOut()">Log out</button>
         </div>
     </div>
 </div>
