--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,5 @@
-::slotted(h3)  {
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-  
-::slotted(form) {
-    display: flex;
-    flex-direction: column;
-}
-
-::slotted(.form-group) {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
 }
