--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-header [userName]="userName">
 </app-header>
-<app-modal-login *ngIf="showLoginModal" (userLogged)="onUserLogged()"></app-modal-login>
-<app-courses *appHideIfNotAuthenticated>
+<!-- <app-breadcrumbs></app-breadcrumbs> -->
+<!-- <app-modal-login *ngIf="showLoginModal" (userLogged)="onUserLogged()"></app-modal-login> -->
+<!-- <app-courses *appHideIfNotAuthenticated>
   <app-input></app-input>
   <app-courses-list></app-courses-list>
-</app-courses>
+</app-courses> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
