--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -7,7 +7,7 @@
     <!-- <app-add-course></app-add-course> -->
     <app-input (inputValue)="onSumbitSearch($event)"></app-input>
     <div class="coursesButtonContainer">
-        <app-button label="+ Add course"></app-button>
+        <app-button label="+ Add course" (clicked)="onAddNewCourse()"></app-button>
     </div>
     <app-courses-list [searchValue]="searchValue"></app-courses-list>
 </div>
