--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<app-header [userName]="userName">
-</app-header>
-<!-- <app-breadcrumbs></app-breadcrumbs> -->
-<!-- <app-modal-login *ngIf="showLoginModal" (userLogged)="onUserLogged()"></app-modal-login> -->
-<!-- <app-courses *appHideIfNotAuthenticated>
-  <app-input></app-input>
-  <app-courses-list></app-courses-list>
-</app-courses> -->
+<app-header [userName]="userName"></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
