--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <div class="coursesInnerContainer">
-    <app-input (inputValue)="onSumbitSearch($event)"></app-input>
+    <app-input></app-input>
     <div class="coursesButtonContainer">
         <app-button label="+ Add course" (clicked)="onAddNewCourse()"></app-button>
     </div>
