--- a/src/app/courses/input/input.component.html
+++ b/src/app/courses/input/input.component.html
@@ -1,4 +1,3 @@
 <div class="inputBlock">
-    <input type="text" [(ngModel)]="text" placeholder="Text to search">
-    <button (click)="onButtonClick()">Submit</button>
+    <input type="text" #box (keyup)="onKeyUp(box.value)" placeholder="Text to search">
 </div>
