--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header [userName]="userName"></app-header>
+<div *ngIf="loading">
+    <app-loading-block></app-loading-block>
+</div>
+<app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
