--- a/src/app/courses/edit-course/edit-course.component.html
+++ b/src/app/courses/edit-course/edit-course.component.html
@@ -4,6 +4,7 @@
         <p class="coursesName">{{breadcrumbs}}</p>
     </div>
 </div>
-<app-add-course [description]="description" [duration]="duration" [date]="date" [title]="title" [id]="id">
+<app-add-course [description]="description" [duration]="duration" [date]="date" [title]="title" [id]="id"
+    [authors]="authors">
 
 </app-add-course>
